Fix footer text alignment

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -21,8 +21,6 @@
     line-height: 95px;
     font-size: 80px;
     color: #ffffff;
-    letter-spacing: 5px;
-    font-weight: lighter;
     
     /* Position */
     position: absolute;
@@ -36,8 +34,6 @@
     color: white;
     width: 430px;
     text-align: center;
-    font-weight: 500;
-    letter-spacing: .55px;
 
     /* Position */
     position: absolute;
